tests/neg-macros/annot-codegen.check

-- Error: tests/neg-macros/annot-codegen/Test_2.scala:9:4 --------------------------------------------------------------
9 |    new Bar("", two, 1, 1.0) // error: body needs to be replaced
  |    ^^^^^^^^^^^^^^^^^^^^^^^^
  |    Replace the underline code by:
  |    data.generated[Bar]()
-- Error: tests/neg-macros/annot-codegen/Test_2.scala:3:80 -------------------------------------------------------------
3 |@data class Bar(val one: String, val two: Int, val three: Int, val four: Double): // error: additional methods needed
  |                                                                                ^
  |                                                     @data requires the following additional method(s):
  |
  |                                                     def withThree(three: scala.Int): Bar = data.generated[Bar]()
  |                                                     def withFour(four: scala.Double): Bar = data.generated[Bar]()
